# nestling

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTES.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.agents/skills/docstrings-style/: SKILL.md
.agents/skills/numpy-docstring-format/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-BUG_REPORT.yml  2-ENHANCEMENT.yml  3-DOC_REQUEST.yml  4-NEW_LESSON.yml
.github/workflows/: ci.yml  deploy-mkdocs.yml
.hooks/: llm_coauthor_notice.py
community/: index.html
credits/: index.html
css/: custom_rules.css
docs/: community.md  credits.md  faq.md  glossary.md  index.md
docs/css/: custom_rules.css
docs/getting-started/: environment-setup.md  how-to-use-this-repo.md
docs/js/: copy_code.js
docs/overrides/: main.html
docs/templates/: index.md  journal-club.md  paper-outline.md
docs/working-together/: student.md  supervisor.md
examples/: __init__.py
examples/arxiv/: arxiv_api.py  inspire_api.py
examples/coding/: __init__.py  requirements.txt
examples/coding/neutrino_flux/: pyproject.toml
examples/coding/neutrino_flux/neutrino_flux/: __init__.py  exceptions.py  integrate.py  models.py
examples/coding/neutrino_flux/tests/: conftest.py  test_integrate.py  test_models.py
examples/skill-files/: coding-docs-template.md  writing-hep.md
faq/: index.html
getting-started/environment-setup/: index.html
getting-started/how-to-use-this-repo/: index.html
glossary/: index.html
img/: site.webmanifest
resources/paper-template/: main.tex  references.bib
search/: search_index.json
templates/: index.html
templates/journal-club/: index.html
templates/paper-outline/: index.html
tests/: test_examples_arxiv.py  test_notebooks.py  test_scripts.py
tracks/01-arxiv/: index.html
tracks/02-journal-club/: index.html
tracks/03-writing/: index.html
tracks/04-git-github/: index.html
tracks/05-coding/: index.html
tracks/06-plotting/: index.html
tracks/07-llm-practices/: index.html
tracks/08-code-of-conduct/: index.html
working-together/student/: index.html
working-together/supervisor/: index.html
(+109 files in other folders)
