[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "nestling"
version = "0.1.0"
description = "A beginner-friendly, physics-first learning repository for early-career researchers."
authors = [
    { name = "Stephan Meighen-Berger", email = "stephan.meighenberger@gmail.com" },
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "nbmake>=1.5",
    "jupyter>=1.0",
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.25",
    "pre-commit>=3",
]

[tool.setuptools.packages.find]
include = ["examples*"]

[tool.ruff]
line-length = 100
exclude = [
    "resources/",
    "site/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
