[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neutrino-flux"
version = "0.1.0"
description = "Spectral models and flux integration — nestling coding-track example"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
notebooks = [
    "matplotlib>=3.9",
    "pandas>=2.2",
    "h5py>=3.11",
    "jupyter>=1.0",
    "numba>=0.59",
    "torch>=2.0",
]

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
# Physics code uses uppercase single-letter names (E for energy, etc.) and
# function names that include physical quantity abbreviations.  The N8xx
# naming rules below conflict with these established physics conventions.
ignore = ["N802", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: integration tests excluded from fast CI runs"]
